# any

./: .build_conf  .editorconfig  .travis.yml  CMakeLists.txt  LICENSE.md  README.rst  include_files.cmake
include/any/: any.hpp
include/ext/: any.hpp
test/: test_any.cpp
tests/: CMakeLists.txt  any.cpp
